--- a/_posts/2021-02-17-NCDR.markdown
+++ b/_posts/2021-02-17-NCDR.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "NCDR Registry Selection"
+title:  "NCDR PID Input"
 date:   2021-02-17 10:40:48 -0500
 categories: jekyll update
 ---
